--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ main h1 {
 
 main h2 {
   margin: 18px 0 12px 0;
+  text-align: left;
   border-bottom: 1px solid #5c4f41;
   font-family: "Special Elite", cursive;
   font-size: 24px;
@@ -18,6 +19,7 @@ main h2 {
 
 main h3 {
   margin: 18px 0 12px 0;
+  text-align: center;
   border-bottom: 1px solid #5c4f41;
   font-family: "Special Elite", cursive;
   font-size: 18px;
@@ -26,4 +28,15 @@ main h3 {
 main p {
   font-family: "Roboto", sans-serif;
   margin-top: 0;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+}
+
+.item {
+  flex: 1;
+  margin: 10px;
 }
